k8s/cadvisor-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.production.yml -o k8s/
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: cadvisor
  name: cadvisor
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.production.yml -o k8s/
        kompose.version: 1.20.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/app-network: "true"
        io.kompose.service: cadvisor
    spec:
      containers:
      - image: 443007076818.dkr.ecr.us-east-2.amazonaws.com/cm-cadvisor:latest
        name: cadvisor
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
