k8s/node-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.production.yml -o k8s/
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: node
  name: node
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.production.yml -o k8s/
        kompose.version: 1.20.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/app-network: "true"
        io.kompose.service: node
    spec:
      containers:
      - env:
        - name: NODE_ENV
          value: development
        image: 443007076818.dkr.ecr.us-east-2.amazonaws.com/cm-node:latest
        name: nodeapp
        ports:
        - containerPort: 3000
        resources: {}
      restartPolicy: Always
status: {}
