k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - env:
        - name: POSTGRES_PASSWORD
          value: password
        image: 443007076818.dkr.ecr.us-east-2.amazonaws.com/cm-postgres:latest
        name: postgres
        imagePullPolicy: Always
        ports:
          - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/pgsql/11/data
            name: postgres-data
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-pv-claim
