k8s/aspnet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnet
spec:
  ports:
  - name: "5000"
    port: 5000
    nodePort: 30000
    targetPort: 5000
  selector:
    app: aspnet
  type: NodePort
