k8s/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.production.yml -o k8s/
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: node
  name: node
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    io.kompose.service: node
  type: NodePort
status:
  loadBalancer: {}
