k8s/app-network-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: app-network
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
